# FinWizard_dll-so

./: .gitignore
.github/workflows/: calc_salary_Birulevo.yml
salary_calc_Birulevo/: CMakeLists.txt  calc_salary_birulevo.cpp  calc_salary_birulevo.h  manifest.json
salary_calc_Birulevo/.github/workflows/: build-plugin.yml
sum_columns/: CMakeLists.txt  iconfig.h  manifest.json  sum_columns.cpp  sum_columns.h
